fixed li alignment

--- a/style.css
+++ b/style.css
@@ -52,6 +52,10 @@
   margin-top: 20px;
 
 }
+li {
+  text-align: left;
+}
+
 /*
 @keyframes move-down {
   from {padding-top: 0px;}
